@@ -1,0 +1,3 @@
+rvm:
+  - 1.9.3
+script: "rake spec"
